Testing/TestCache/loop4_error.txt
Error trace on line: 5, column: 1 in file "loop4_error".
for {from=6; to=3; by=0; state=0; body = inl {state i} ->
^
Error trace on line: 9, column: 1 in file "loop4_error".
|> writeline
^
Error trace on line: 60, column: 14 in file "Core".
inl (>>) a b x = b (a x)
             ^
Error trace on line: 38, column: 11 in file "Loops".
        | {by} when lit_is by && by = 0 -> error_type er_msg
          ^
Error trace on line: 4, column: 16 in file "Core".
inl error_type x = !ErrorType(x)
               ^
lit The by field should not be zero in loop as the program would diverge.
